@@ -353,6 +353,9 @@ Version 1.5.2 - SVN
   - Now allow multiple plugins to handle (add links for) a single
     attachment MIME type.
   - Fixed sqauth_read_password() for plugins on the login_verified hook.
+  - Forced addition of a file suffix to attachments that lack a filename
+    (helps forwarded messages avoid spam filters) (Thanks to Petr
+    Kletecka) (#3139004).
 
 Version 1.5.1 (branched on 2006-02-12)
 --------------------------------------
